fix: menu items not showing

--- a/src/style/modules/elements/basket.scss
+++ b/src/style/modules/elements/basket.scss
@@ -6,7 +6,6 @@
   transition: width 0.5s ease-in-out;
   width: 100vw;
   min-height: 100vh;
-  border-right: 1px solid white;
   &.reveal {
     width: calc(100vw - var(--basket-width));
   }
